--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,9 +1,20 @@
-<h1>Restaurants</h1>
+<div class="banner">
+  <div class="container">
+    <h1><strong>Restaurants</strong></h1>
+    <p>Find the new best places around.</p>
+  </div>
+</div>
+
 <ul class="list-unstyled">
   <% @restaurants.each do |restaurant| %>
-  <div class="d-sm-flex py-16 ps-4 ps-10 pe-sm-10" style="text-align:center; display:inline-block;">
-    <%# <%= image_tag('noun-restaurant-3846100.png', draggable: "true", id: "drag1") %>
-    <li><%= link_to restaurant.name, restaurant_path(restaurant), :class=>"card-text text-decoration-none" %></li>
+  <div class="row">
+    <div class="column">
+      <div class="card">
+        <p>
+          <li><%= link_to restaurant.name, restaurant_path(restaurant), :class=>"card-text text-decoration-none" %></li>
+        </p>
+      </div>
+    </div>
   </div>
   <% end %>
 </ul>
